# fastapi-doc-rag

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  create_pdf.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/routers/: chat.py  ingestion.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/schemas/: document.py  rag.py
app/services/: agent.py  booking.py  chunking.py  email_service.py  embeddings.py  memory.py  text_extractor.py  vectorstore.py
benchmarks/: corpus.txt  run_benchmark.py
modular-fastapi-backend/: Dockerfile  README.md  TECHNICAL_OVERVIEW.md  requirements.txt
modular-fastapi-backend/app/: main.py
modular-fastapi-backend/app/api/v1/: chat.py  ingestion.py
modular-fastapi-backend/app/core/: config.py
modular-fastapi-backend/app/db/: session.py
modular-fastapi-backend/app/schemas/: rag.py
modular-fastapi-backend/app/services/: booking_handler.py  ingestion_service.py  rag_service.py
modular-fastapi-backend/app/utils/: chunking.py  embeddings.py
reports/: FINDINGS.md
tests/: conftest.py  test_chat.py  test_ingestion.py
