[project]
name = "modular-rag-backend"
version = "0.1.0"
description = "Modular FastAPI backend: document ingestion and an agentic RAG API."
requires-python = ">=3.10"

# Runtime dependencies are pinned in requirements.txt.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
